# Remus

examples/: CMakeLists.txt
examples/BasicClient/: clientMain.cxx
examples/RPCExample/: CMakeLists.txt  RPCClient.h  RPCService.cpp  RPCService.h  RPCUtil.h  basic.proto  clientMain.cxx  serverMain.cxx
examples/TriangleWorker/: client_main.cxx
remus/client/: CMakeLists.txt  Client.h  JobDataRequest.h  JobFileRequest.h
remus/common/: ConditionalStorage.h  FileHandle.h
remus/server/detail/: JobQueue.h
remus/server/internal/: JobQueue.h
